--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,4 +1,4 @@
-SUBDIRS = blinky printf cdc-acm boot-uf2-dfu boot-dfu-spiflash
+SUBDIRS = blinky printf cdc-acm ez-dap boot-uf2-dfu boot-dfu-spiflash
 
 all:
 	@set -e; for dir in $(SUBDIRS); do $(MAKE) -C $${dir} all; done
